--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "GitHub Supportocat | Diversity-in-Tech Advocate | Mom Who Codes"
 ---
 
 {% for post in paginator.posts %}
