--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@ description: "Have questions? I have answers (maybe)."
 header-img: "img/typewriter.jpg"
 ---
 
+<div id="wufoo-z1faxhsx0oae6tj">
+Fill out my <a href="https://cmrberry.wufoo.com/forms/z1faxhsx0oae6tj">online form</a>.
+</div>
+<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">Online contact and registration forms from <a href="http://www.wufoo.com">Wufoo</a>.</div>
 <script type="text/javascript">var z1faxhsx0oae6tj;(function(d, t) {
 var s = d.createElement(t), options = {
 'userName':'cmrberry',
@@ -21,4 +25,3 @@ var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') retu
 try { z1faxhsx0oae6tj = new WufooForm();z1faxhsx0oae6tj.initialize(options);z1faxhsx0oae6tj.display(); } catch (e) {}};
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
-
