--- a/about.html
+++ b/about.html
@@ -5,8 +5,4 @@ description: "No, I'm not from Glee"
 header-img: "img/me.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>Rachel Berry is a self-taught programmer and perpetual student of all things tech. Rachel is part of GitHub’s technical support team and loves helping developers be even more awesome than they already are. She spends her spare time hiking with her husband and son, working on a master’s in computer science at Georgia Tech, and teaching Ruby on Rails and GitHub to local nonprofit diversity-in-tech meetups.</p>
